--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,85 @@
 *{
     margin:0; 
     box-sizing: border-box;
+    
 }
 
-body{
-    background-color: black;
-}
-h1{
-    color:yellow;
-    margin: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+
 
 #particles-js{
     width: 100%;
     height: 100%;
-     
-     position:fixed;
-     z-index: -1;
-
-    
+    background-size: 100%;
+    position:fixed;
+    /* z-index: 99; */
+    /* padding: 50%; */
  }
 
-body{
+ .imagen_fondo{
+     background-image:url('../img/fondo\ logo.png');
+     background-size: 100%;
+     /* padding:10px 20px; */
+     background-repeat: no-repeat; 
+     position: relative; 
+     width: 100%;
+     z-index: -1;
+    
+    
+     
+ }
+ 
+
+/* body{
     background-image: url("../img/fondo\ logo.png");
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
-    height: 20em;
+    height:20em;
     font-family: sans-serif; 
-    /* padding: 90px 20px 0;   */
+    /* padding: 90px 20px 0; 
+    max-width:1000px; 
+     */
+
+/* }  */
+/* .contenedor-titulo{
+    background-attachment: fixed;
+} */
+
+.titulo{
+    position:absolute;
+    color:white
 }
 
 .header{
-    background-color: transparent;
+    
     height:80px;
     position:fixed;
     align-items: center;
     width: 100%;
     top: 0;
     left: 0;
+    padding: 0px;
 }
 
 .nav{
     display:flex;
-    justify-content: space-between;
+    justify-content: right;
     max-width:992px;
-    margin: o auto;
+    margin: 50 auto;
+    position:relative;
+    
+    
+
 
 }
 
 .nav-link{
-    color:white;
+    
+    
     text-decoration:none;
+    margin: 50;
+
 }
 
 .logo{
@@ -66,6 +94,7 @@ body{
     display:flex;
     margin-right:40px;
     list-style: none;
+   
 }
 
 .nav-menu-item{
@@ -73,23 +102,31 @@ body{
     margin: 0 10px;
     line-height: 80px;
     text-transform: uppercase;
+    
 }
 
 .nav-menu-link{
     padding: 8px 12px;
     border-radius: 3px;
+    color:white !important;
+    font-family: 'Chewy', cursive;
 }
 
 .nav-menu-link:hover,
 .nav-menu-link_active{
-background-color:blue;
+background-color: rgba(139, 139, 255, 0.267);
 transition: 0.5s;
+color:rgb(121, 121, 120);
+}
+
+.nav-menu-link, nav-link{
+    color:red;
 }
 
 
 
 .nav-boton{
-    color:white;
+    color:rgb(0, 0, 0);
     background: none;
     border: none;
     font-size:30px;
@@ -105,9 +142,25 @@ transition: 0.5s;
     body{        
         padding-top: 70px;
     }
+    .nav{
+        background-color: transparent;
+    }
+
+    .imagen_fondo{
+        background-image:url('../img/fondo\ logo.png');
+        background-size: 100%;
+        padding:10px 20px;
+        background-repeat: no-repeat; 
+        position: absolute;
+        width: 100%;
+       
+       
+        
+    }
 
     .header{
         height:60px;
+        background-color: rgba(0, 0, 0, 0.267) !important;
     }
 
     .logo{
@@ -121,7 +174,7 @@ transition: 0.5s;
         align-items: center;
         margin-right: 20px;
         
-        background-color: red;
+        background-color: rgba(0, 0, 0, 0.267) !important;
         position:fixed;
         left:0;
         top:60px;
@@ -155,3 +208,5 @@ transition: 0.5s;
     }
 
 }
+
+
